--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
 
       <div class="hero-section">
         <div class="header">
+          <div class="mobile-hero-pic">
+            <img src="./Images/Mobile Profile Pic.png" alt="" srcset="" />
+          </div>
           <div class="header-hero-text">
             <div class="title">
               <p>I'm</p>
@@ -55,19 +58,22 @@
             </div>
 
             <div class="subtitle">
-              <!-- <h2>A Lifelong Learner and <br />A Web Developer</h2> -->
               <h2>A Passionate Web Developer <span class="cursor">|</span></h2>
-              
             </div>
           </div>
 
-          <div class="circle-down">
-            <a href="#about">
-              <i class="fa-solid fa-circle-chevron-down"></i>
-              <p>Click to scroll</p>
-            </a>
+          <div class="button-container">
+            <a
+              href="https://drive.google.com/uc?id=1Md2jMPbVL7o9dsdyLDuZViJ2VJ7EIfbe"
+              class="button"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Download CV</a
+            >
+            <a href="#about" class="button">About Me</a>
           </div>
         </div>
+
         <div class="hero-image">
           <img
             src="./Images/Hero Image.png"
@@ -87,26 +93,46 @@
           <div class="profile-container">
             <img
               class="profile-pic"
-              src="./Images/Profile Pic.jpg"
+              src="./Images/Mobile Profile Pic.png"
               alt="profile-pic"
             />
           </div>
           <div class="text-content">
             <p>
-              Greetings! I'm Rahul Sarode, a dedicated frontend developer with a
-              passion for crafting exceptional digital experiences.
+              Hello, I'm Rahul Sarode - an Application Support Specialist with
+              5+ years of experience, currently transitioning to FrontEnd
+              Development. Self-taught in HTML, CSS, and JS, I bring a track
+              record of problem-solving and task ownership.
             </p>
+
             <p>
-              Armed with a Bachelor's degree in Information Technology and a
-              background in satellite communication, I bring a unique blend of
-              technical expertise and creative innovation to the field of web
-              development.
+              In my free time, I enjoy playing FIFA and love watching sitcoms
+              like Friends, Seinfeld, HIMYM, etc.
             </p>
-            <p>
-              Join me on a transformative journey as I turn ideas into visually
-              stunning websites, driven by a lifelong love for learning and an
-              unwavering commitment to delivering outstanding web solutions.
-            </p>
+
+          </div>
+          <div class="progress-main-container">
+            <div class="techstack">
+              <p>HTML</p>
+              <p>80%</p>
+            </div>
+            <div class="progress-container">
+              <div class="progress-bar" id="html-progress"></div>
+            </div>
+            <div class="techstack">
+            <p>CSS</p>
+            <p>75%</p>
+          </div>
+            <div class="progress-container">
+              <div class="progress-bar" id="css-progress"></div>
+            </div>
+            <div class="techstack">
+              <p>JS</p>
+              <p>85%</p>
+            </div>
+            <div class="progress-container">
+              <div class="progress-bar" id="js-progress"></div>
+            </div>
           </div>
         </div>
       </div>
@@ -121,7 +147,10 @@
         <div class="card-1">
           <div class="card-1-front">
             <div class="company-img">
-              <img src="./Images/Experience Section Images/Starlink.jpg" alt="" />
+              <img
+                src="./Images/Experience Section Images/Starlink.jpg"
+                alt=""
+              />
             </div>
 
             <div class="position-title">
@@ -155,10 +184,7 @@
         <div class="card-2">
           <div class="card-2-front">
             <div class="company-img">
-              <img
-                src="./Images/Experience Section Images/KVH.PNG"
-                alt=""
-              />
+              <img src="./Images/Experience Section Images/KVH.PNG" alt="" />
             </div>
 
             <div class="position-title">
@@ -200,7 +226,7 @@
             </div>
 
             <div class="position-title">
-              <p>Technical Assistant</p>
+              <p>Technical Assistant IT and Service</p>
               <p>Company: Station Satcom</p>
               <p>Location: BKC - Mumbai</p>
               <p>Oct 2018 - April 2021</p>
@@ -214,8 +240,7 @@
                 support for FBB SIM, FX, and Amos mailing services.
               </p>
               <p>
-                &#x2022; Zoho Desk: Managed mailing solutions and streamlined
-                ticketing processes.
+                &#x2022; Zoho Desk: Managed mailing solutions and ticketing processes.
               </p>
               <p>
                 &#x2022; Maritime Support: Offered crucial ship-to-shore
@@ -244,7 +269,7 @@
           </p>
         </div>
         <div class="project-container">
-          <div class="project-1">
+          <div class="project">
             <a
               href="https://rahul-sarode-007.github.io/Currency-Exchange-Rate-App/"
             >
@@ -255,7 +280,7 @@
                 onmouseout="pauseVideo()"
             /></a>
 
-            <p><b>Currency Exchange Rate App: </b></p>
+            <p>Currency Exchange Rate App: </p>
             <p>
               Developed a Real-Time Currency Exchange RateApp, showcasing
               proficiency in API integration anddynamic web development.
@@ -267,30 +292,32 @@
             </video> -->
           </div>
 
-          <div class="project-2">
+          <div class="project">
             <a href="https://rahul-sarode-007.github.io/Tip-Tracker/">
               <img
                 src="./Images/Project Images/Tip Tracker App.PNG"
                 srcset=""
               />
             </a>
-            <p><b> Web App - Tip Tracker: </b></p>
+            <p>Web App - Tip Tracker: </p>
             <p>
               Developed a responsive Tip Tracker - a web app forsplitting bills
               - entirely from scratch, based on a design
             </p>
           </div>
 
-          <div class="project-3">
+          <div class="project">
             <a href="#hero">
-              <img src="./Images/Project Images/Portfolio Website.PNG" srcset="" />
+              <img
+                src="./Images/Project Images/Portfolio Website.PNG"
+                srcset=""
+              />
             </a>
             <p>
-              <b> Portfolio Website </b>
+              Portfolio Website 
             </p>
             <p>
-              Created portfolio Website using HTML, CSS and JS: Lorem ipsum
-              dolor sit amet consectetur adipisicing elit.
+              Created portfolio Website using HTML, CSS and JS. Used different display layout like flex and grid.
             </p>
           </div>
         </div>
