--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
           <div class="button-container">
             <a
-              href="https://drive.google.com/uc?id=1Md2jMPbVL7o9dsdyLDuZViJ2VJ7EIfbe"
+              href="https://jade-yevette-44.tiiny.site/"
               class="button"
               target="_blank"
               rel="noopener noreferrer"
@@ -159,10 +159,17 @@
               <p>Location: BKC - Mumbai</p>
               <p>July 2022 - Current</p>
             </div>
+
+            <div class="circle-up-1">
+                <i class="fa-solid fa-circle-chevron-down"></i>
+            </div>
+            <p>Click Me</p>
+
           </div>
 
           <div class="card-1-back">
             <div class="description">
+              
               <p>
                 &#x2022; Starlink Expertise: Provided cutting-edge satellite
                 communication solutions for maritime and land.
@@ -176,7 +183,13 @@
                 &#x2022; Customization: Enhanced billing software using HTML,
                 CSS, and JavaScript.
               </p>
+
             </div>
+            <div class="circle-down-1">
+              <i class="fa-solid fa-circle-chevron-down"></i>
+          </div>
+
+          <p>Click Me</p>
           </div>
         </div>
 
@@ -193,6 +206,12 @@
               <p>Location: BKC - Mumbai</p>
               <p>April 2021 - July 2023</p>
             </div>
+
+            <div class="circle-up-2">
+                <i class="fa-solid fa-circle-chevron-down"></i>
+            </div>
+            <p>Click Me</p>
+
           </div>
 
           <div class="card-2-back">
@@ -212,6 +231,11 @@
                 maintained the billing database.
               </p>
             </div>
+            <div class="circle-down-2">
+              <i class="fa-solid fa-circle-chevron-down"></i>
+          </div>
+
+          <p>Click Me</p>
           </div>
         </div>
 
@@ -226,11 +250,17 @@
             </div>
 
             <div class="position-title">
-              <p>Technical Assistant IT and Service</p>
+              <p>Technical Assistant</p>
               <p>Company: Station Satcom</p>
               <p>Location: BKC - Mumbai</p>
               <p>Oct 2018 - April 2021</p>
             </div>
+
+            <div class="circle-up-3">
+              <i class="fa-solid fa-circle-chevron-down"></i>
+          </div>
+          <p>Click Me</p>
+
           </div>
 
           <div class="card-3-back">
@@ -247,6 +277,11 @@
                 communication support.
               </p>
             </div>
+            <div class="circle-down-3">
+              <i class="fa-solid fa-circle-chevron-down"></i>
+          </div>
+
+          <p>Click Me</p>
           </div>
         </div>
       </div>
@@ -262,7 +297,7 @@
         <div class="project-description">
           <p>
             Below are some of the projects I've created with my skills in HTML,
-            CSS, and Bootstrap. I've honed my CSS techniques, including flexbox,
+            CSS and JavaScript. I've honed my CSS techniques, including flexbox,
             grid layouts, and the use of floats, to bring these projects to
             life. Explore the diverse range of web creations that showcase my
             dedication to crafting interactive and visually appealing websites.
@@ -352,7 +387,7 @@
             <li>About Me</li>
           </a>
 
-          <a href="#experience-section">
+          <a href="#experience">
             <li>Experience</li>
           </a>
 
