changed mobile hero section, button color

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <div class="button-container">
             <a
               href="https://jade-yevette-44.tiiny.site/"
-              class="button"
+              class="button button-cv"
               target="_blank"
               rel="noopener noreferrer"
               >Download CV</a
