--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
             <p>Currency Exchange Rate App:</p>
             <p>
               Developed a Real-Time Currency Exchange RateApp, showcasing
-              proficiency in API integration anddynamic web development.
+              proficiency in API integration and dynamic web development.
             </p>
 
             <!-- <video class="project-1-video">
@@ -341,7 +341,7 @@
             </a>
             <p>Web App - Tip Tracker:</p>
             <p>
-              Developed a responsive Tip Tracker - a web app forsplitting bills
+              Developed a responsive Tip Tracker - a web app for splitting bills
               - entirely from scratch, based on a design
             </p>
           </div>
@@ -349,7 +349,7 @@
           <div class="project">
             <a href="#hero">
               <img
-                src="./Images/Project Images/Portfolio Website.PNG"
+                src="./Images/Project Images/Portfolio Website Image.PNG"
                 srcset=""
               />
             </a>
