Working on experience section UI

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <div class="company-img">
               <img
                 src="./Images/Experience Section Images/Starlink.jpg"
-                alt=""
+                alt="Starlink-logo"
               />
             </div>
 
@@ -178,16 +178,16 @@
           <div class="card-1-back">
             <div class="description">
               <p>
-                &#x2022; Starlink Expertise: Provided cutting-edge satellite
+                &#x2022; <b>Starlink Expertise:</b> Provided cutting-edge satellite
                 communication solutions for maritime and land.
               </p>
 
               <p>
-                &#x2022; Project Management: Led ship takeovers and handovers.
+                &#x2022; <b>Project Management:</b> Led ship takeovers and handovers.
               </p>
 
               <p>
-                &#x2022; Customization: Enhanced billing software using HTML,
+                &#x2022; <b>Customization:</b> Enhanced billing software using HTML,
                 CSS, and JavaScript.
               </p>
             </div>
@@ -203,7 +203,7 @@
         <div class="card-2">
           <div class="card-2-front">
             <div class="company-img">
-              <img src="./Images/Experience Section Images/KVH.PNG" alt="" />
+              <img src="./Images/Experience Section Images/KVH.png" alt="KVH-logo" />
             </div>
 
             <div class="position-title">
@@ -222,17 +222,17 @@
           <div class="card-2-back">
             <div class="description">
               <p>
-                &#x2022; KVH: Activated/deactivated and provided support for KVH
+                &#x2022; <b>KVH:</b> Activated/deactivated and provided support for KVH
                 communication terminals
               </p>
 
               <p>
-                &#x2022; Problem-Solving: Provided application support for
+                &#x2022; <b>Problem-Solving:</b> Provided application support for
                 various communication terminals.
               </p>
 
               <p>
-                &#x2022; Billing Management: Managed customer accounts and
+                &#x2022; <b>Billing Management:</b> Managed customer accounts and
                 maintained the billing database.
               </p>
             </div>
@@ -250,7 +250,7 @@
             <div class="company-img">
               <img
                 src="./Images/Experience Section Images/Inmarsat.PNG"
-                alt=""
+                alt="Inmarsat-logo"
               />
             </div>
 
@@ -270,28 +270,26 @@
           <div class="card-3-back">
             <div class="description">
               <p>
-                &#x2022; Inmarsat FBB: Activated/deactivated and provided
+                &#x2022; <b>Inmarsat FBB:</b> Activated/deactivated and provided
                 support for FBB SIM, FX, and Amos mailing services.
               </p>
               <p>
-                &#x2022; Zoho Desk: Managed mailing solutions and ticketing
+                &#x2022; <b>Zoho Desk:</b> Managed mailing solutions and ticketing
                 processes.
               </p>
               <p>
-                &#x2022; Maritime Support: Offered crucial ship-to-shore
+                &#x2022; <b>Maritime Support:</b> Offered crucial ship-to-shore
                 communication support.
               </p>
             </div>
             <div class="circle-down-3">
               <i class="fa-solid fa-circle-chevron-down"></i>
             </div>
-
             <p>Click Me</p>
           </div>
         </div>
       </div>
 
-      <div class="test"></div>
     </section>
 
     <!-- ****************************************************** -->
