Working On UI - Project Section

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <div class="card-1-front">
             <div class="company-img">
               <img
-                src="./Images/Experience Section Images/Starlink.jpg"
+                src="./Images/Experience Section Images/Starlink.png"
                 alt="Starlink-logo"
               />
             </div>
@@ -249,7 +249,7 @@
           <div class="card-3-front">
             <div class="company-img">
               <img
-                src="./Images/Experience Section Images/Inmarsat.PNG"
+                src="./Images/Experience Section Images/Inmarsat.png"
                 alt="Inmarsat-logo"
               />
             </div>
@@ -318,7 +318,7 @@
                 onmouseout="pauseVideo()"
             /></a>
 
-            <p>Currency Exchange Rate App:</p>
+            <p><b>Currency Exchange Rate App:</b></p>
             <p>
               Developed a Real-Time Currency Exchange RateApp, showcasing
               proficiency in API integration and dynamic web development.
@@ -337,7 +337,7 @@
                 srcset=""
               />
             </a>
-            <p>Web App - Tip Tracker:</p>
+            <p><b>Web App - Tip Tracker:</b></p>
             <p>
               Developed a responsive Tip Tracker - a web app for splitting bills
               - entirely from scratch, based on a design
@@ -351,7 +351,7 @@
                 srcset=""
               />
             </a>
-            <p>Portfolio Website</p>
+            <p><b>Portfolio Website</b></p>
             <p>
               Created portfolio Website using HTML, CSS and JS. Used different
               display layout like flex and grid.
