Updated CV link

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
           <div class="button-container">
             <a
-              href="https://jade-yevette-44.tiiny.site/"
+              href="https://drive.google.com/file/d/1ozqNEAZ3nq86xzZJdxcAVgIWT57ifQtj/view"
               class="button button-cv"
               target="_blank"
               rel="noopener noreferrer"
