Made Tablet Responsive

--- a/index.html
+++ b/index.html
@@ -187,8 +187,7 @@
               </p>
 
               <p>
-                &#x2022; <b>Customization:</b> Enhanced billing software using HTML,
-                CSS, and JavaScript.
+                &#x2022; <b>Manage communication-related formalities:</b> during ship takeovers and handovers.
               </p>
             </div>
             <div class="circle-down-1">
