updated the CV link and made some changes in UI

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
           <div class="button-container">
             <a
-              href="https://drive.google.com/file/d/1ozqNEAZ3nq86xzZJdxcAVgIWT57ifQtj/view"
+              href="https://drive.google.com/file/d/1yMRpuzEiq4iZQPyPvwu_Kd9_ptcgyX3D/view"
               class="button button-cv"
               target="_blank"
               rel="noopener noreferrer"
@@ -309,15 +309,17 @@
           <div class="project">
             <a
               href="https://rahul-sarode-007.github.io/Currency-Exchange-Rate-App/"
+               target="_blank"
             >
               <img
                 src="./Images/Project Images/Currency Exchange App.PNG"
                 srcset=""
                 onmouseover="startVideo()"
                 onmouseout="pauseVideo()"
-            /></a>
+            />
+            <p class="project-name"><b>Currency Exchange Rate App:</b></p>
+          </a>
 
-            <p><b>Currency Exchange Rate App:</b></p>
             <p>
               Developed a Real-Time Currency Exchange RateApp, showcasing
               proficiency in API integration and dynamic web development.
@@ -330,13 +332,13 @@
           </div>
 
           <div class="project">
-            <a href="https://rahul-sarode-007.github.io/Tip-Tracker/">
+            <a href="https://rahul-sarode-007.github.io/Tip-Tracker/" target="_blank">
               <img
                 src="./Images/Project Images/Tip Tracker App.PNG"
                 srcset=""
               />
+              <p class="project-name"><b>Web App - Tip Tracker:</b></p>
             </a>
-            <p><b>Web App - Tip Tracker:</b></p>
             <p>
               Developed a responsive Tip Tracker - a web app for splitting bills
               - entirely from scratch, based on a design
@@ -349,8 +351,8 @@
                 src="./Images/Project Images/Portfolio Website Image.PNG"
                 srcset=""
               />
+              <p class="project-name"><b>Portfolio Website</b></p>
             </a>
-            <p><b>Portfolio Website</b></p>
             <p>
               Created portfolio Website using HTML, CSS and JS. Used different
               display layout like flex and grid.
